--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1295,6 +1295,192 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tfutil\n",
+    "timeline = tfutil.read_timeline('timeline.ctf.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>arg_name</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>tid</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>dur</th>\n",
+       "      <th>arg_op</th>\n",
+       "      <th>arg_input0</th>\n",
+       "      <th>arg_input1</th>\n",
+       "      <th>arg_input2</th>\n",
+       "      <th>arg_input3</th>\n",
+       "      <th>arg_input4</th>\n",
+       "      <th>arg_input5</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>process_name</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Allocators</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>process_name</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/job:localhost/replica:0/task:0/device:CPU:0 C...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>process_name</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "      <td>/job:localhost/replica:0/task:0/device:CPU:0 T...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NoOp</td>\n",
+       "      <td>X</td>\n",
+       "      <td>1</td>\n",
+       "      <td>_SOURCE</td>\n",
+       "      <td>Op</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1585070962838395</td>\n",
+       "      <td>46</td>\n",
+       "      <td>NoOp</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Const</td>\n",
+       "      <td>X</td>\n",
+       "      <td>1</td>\n",
+       "      <td>res3c_branch2b/Conv2D/merged_input</td>\n",
+       "      <td>Op</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1585070962838467</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Const</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           name ph pid                                           arg_name  \\\n",
+       "0  process_name  M   0                                         Allocators   \n",
+       "1  process_name  M   1  /job:localhost/replica:0/task:0/device:CPU:0 C...   \n",
+       "2  process_name  M   2  /job:localhost/replica:0/task:0/device:CPU:0 T...   \n",
+       "3          NoOp  X   1                                            _SOURCE   \n",
+       "4         Const  X   1                 res3c_branch2b/Conv2D/merged_input   \n",
+       "\n",
+       "   cat  tid                ts  dur arg_op arg_input0 arg_input1 arg_input2  \\\n",
+       "0  NaN  NaN               NaN  NaN    NaN        NaN        NaN        NaN   \n",
+       "1  NaN  NaN               NaN  NaN    NaN        NaN        NaN        NaN   \n",
+       "2  NaN  NaN               NaN  NaN    NaN        NaN        NaN        NaN   \n",
+       "3   Op    0  1585070962838395   46   NoOp        NaN        NaN        NaN   \n",
+       "4   Op    0  1585070962838467   34  Const        NaN        NaN        NaN   \n",
+       "\n",
+       "  arg_input3 arg_input4 arg_input5   id  \n",
+       "0        NaN        NaN        NaN  NaN  \n",
+       "1        NaN        NaN        NaN  NaN  \n",
+       "2        NaN        NaN        NaN  NaN  \n",
+       "3        NaN        NaN        NaN  NaN  \n",
+       "4        NaN        NaN        NaN  NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeline.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
