Add sparse model notebook

--- a/sparsemodel.ipynb
+++ b/sparsemodel.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_weights(model_xml):\n",
+    "def get_weights(model_xml, as_dict=False):\n",
     "    from openvino.inference_engine import IECore\n",
     "    ie = IECore()\n",
     "    model_bin = model_xml.replace('xml', 'bin')\n",
     "    net = ie.read_network(model=model_xml, weights=model_bin)\n",
     "    weights = []\n",
+    "    ldict   = {}\n",
     "    for k in net.layers.keys():\n",
     "        #print(k, net.layers[k].shape)\n",
     "        if 'weights' in net.layers[k].weights:\n",
@@ -19,7 +20,13 @@
     "            w = l.weights['weights']\n",
     "            #print(k, l.shape, w.shape)\n",
     "            weights.append(w)\n",
+    "            ldict[k] = l\n",
+    "    if as_dict: return ldict\n",
     "    return weights\n",
+    "\n",
+    "def calc_sparsity(w):\n",
+    "    import numpy as np\n",
+    "    return np.sum(w == 0)/w.flatten().shape[0]\n",
     "\n",
     "def weight_hist(model_xml):\n",
     "    import numpy as np\n",
@@ -32,9 +39,17 @@
     "    logbins = np.linspace(np.mean(w) - 3*np.std(w), np.mean(w) + 3*np.std(w),len(bins))\n",
     "\n",
     "    plt.hist(w, bins=logbins)\n",
-    "    sparsity = 100*np.sum(w == 0)/w.flatten().shape[0]\n",
+    "    sparsity = 100*calc_sparsity(w)\n",
+    "    plt.yscale('log', nonposy='clip')\n",
     "    plt.title('%s histogram sparsity=%0.3f%%' % (model_xml, sparsity))\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    \n",
+    "def sparse_summary(model_xml, threshold=0):\n",
+    "    for k, l in get_weights(model_xml, as_dict=True).items():\n",
+    "        w = l.weights['weights']\n",
+    "        s = calc_sparsity(w)\n",
+    "        if s > threshold:\n",
+    "            print(k, l.shape, w.shape, 'Sparsity: %0.2f' % calc_sparsity(w))"
    ]
   },
   {
@@ -43,8 +58,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_xml = 'model32.xml'\n",
+    "# Show overall weights\n",
+    "#model_xml = 'model32.xml'\n",
+    "model_xml = 'intel/resnet-50-int8-sparse-v1-tf-0001.xml'\n",
     "weight_hist(model_xml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_summary(model_xml, 0.3)"
    ]
   },
   {
