Visualize sparse weights

--- a/sparsemodel.ipynb
+++ b/sparsemodel.ipynb
@@ -78,6 +78,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def sparse_weight_viz(model_xml, threshold=0):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    for k, l in get_weights(model_xml, as_dict=True).items():\n",
+    "        w = l.weights['weights']\n",
+    "        s = calc_sparsity(w)\n",
+    "        if s > threshold:\n",
+    "            print(k, l.shape, w.shape, 'Sparsity: %0.2f' % calc_sparsity(w))\n",
+    "            sz = int(np.ceil(np.sqrt(w.shape)))\n",
+    "            img = np.zeros((sz*sz))\n",
+    "            img[:w.shape[0]] = w\n",
+    "            img = np.reshape(img, (sz, sz))\n",
+    "            mask = img == 0\n",
+    "            img[mask] = 1\n",
+    "            img[~mask] = 0\n",
+    "            plt.imshow(img, cmap='gray')\n",
+    "            plt.show()\n",
+    "            print(img.shape, img.min(), img.mean(), img.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_weight_viz(model_xml, 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
