Add zero-run counting.

--- a/sparsemodel.ipynb
+++ b/sparsemodel.ipynb
@@ -24,6 +24,33 @@
     "    if as_dict: return ldict\n",
     "    return weights\n",
     "\n",
+    "def zero_runs_(a):\n",
+    "    import numpy as np\n",
+    "    iszero = np.concatenate(([0], np.equal(a, 0).view(np.int8), [0]))\n",
+    "    absdiff = np.abs(np.diff(iszero))\n",
+    "    ranges = np.where(absdiff == 1)[0].reshape(-1, 2)\n",
+    "    return ranges\n",
+    "\n",
+    "def zero_runs(a):\n",
+    "    runs = zero_runs_(a)\n",
+    "    return runs[:,1] - runs[:,0]\n",
+    "\n",
+    "def summarize_zeros(w, name=\"\", plot=True):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    z = zero_runs(w)\n",
+    "    nz = np.sum(z[z > 0])\n",
+    "    gt32bit = np.sum(z[z >= (512/32)]) # AVX512 32 bit\n",
+    "    tt = \"%s Zeroed 32-bit AVX-512: %0.2f%%\" % (name, 100*gt32bit/nz)\n",
+    "    if plot:\n",
+    "        plt.title(tt)\n",
+    "        plt.hist(z[z < 64], bins=30)\n",
+    "        plt.xlim(0, 64)\n",
+    "        plt.axvline(512/32, color='r')\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        print(tt)\n",
+    "\n",
     "def calc_sparsity(w):\n",
     "    import numpy as np\n",
     "    return np.sum(w == 0)/w.flatten().shape[0]\n",
@@ -43,13 +70,24 @@
     "    plt.yscale('log', nonposy='clip')\n",
     "    plt.title('%s histogram sparsity=%0.3f%%' % (model_xml, sparsity))\n",
     "    plt.show()\n",
+    "    summarize_zeros(w, model_xml.split('/')[-1])\n",
     "    \n",
     "def sparse_summary(model_xml, threshold=0):\n",
     "    for k, l in get_weights(model_xml, as_dict=True).items():\n",
     "        w = l.weights['weights']\n",
     "        s = calc_sparsity(w)\n",
     "        if s > threshold:\n",
-    "            print(k, l.shape, w.shape, 'Sparsity: %0.2f' % calc_sparsity(w))"
+    "            print(k, l.shape, w.shape, 'Sparsity: %0.2f' % calc_sparsity(w))\n",
+    "            summarize_zeros(w, model_xml.split('/')[-1], plot=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_hist(\"models/mobilenetv1.xml\")"
    ]
   },
   {
@@ -59,8 +97,7 @@
    "outputs": [],
    "source": [
     "# Show overall weights\n",
-    "#model_xml = 'model32.xml'\n",
-    "model_xml = 'intel/resnet-50-int8-sparse-v1-tf-0001.xml'\n",
+    "model_xml = 'models/resnet50.xml'\n",
     "weight_hist(model_xml)"
    ]
   },
@@ -96,7 +133,8 @@
     "            img[~mask] = 1\n",
     "            plt.imshow(img, cmap='gray')\n",
     "            plt.show()\n",
-    "            print(img.shape, img.min(), img.mean(), img.max())"
+    "            #print(img.shape, img.min(), img.mean(), img.max())\n",
+    "            summarize_zeros(w)"
    ]
   },
   {
